Add ability to bulk delete messages and threads. closes #434
